--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -5,5 +5,5 @@ COPY ./target/gs-spring-boot-0.1.0.jar /usr/app/
 WORKDIR /usr/app
 
 RUN sh -c 'touch gs-spring-boot-0.1.0.jar'
-
+EXPOSE 80
 ENTRYPOINT ["java","-jar","gs-spring-boot-0.1.0.jar"]
